crates/alloy-signer/tests/trybuild/no_sync_signer.stderr
error[E0277]: the trait bound `LocalAlloyKeystoreSigner: Signer` is not satisfied
  --> tests/trybuild/no_sync_signer.rs:14:26
   |
14 |     requires_sync_signer(&signer);
   |     -------------------- ^^^^^^^ the trait `Signer` is not implemented for `LocalAlloyKeystoreSigner`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `requires_sync_signer`
  --> tests/trybuild/no_sync_signer.rs:4:28
   |
 4 | fn requires_sync_signer<S: Signer>(_signer: &S) {}
   |                            ^^^^^^ required by this bound in `requires_sync_signer`
